refactor calculation payroll