@@ -1,21 +1,19 @@
 package calculation.services.impl;
 
-import com.fanap.hcm.core.hcmcore.pcn.repository.entity.*;
-import com.fanap.hcm.core.hcmcore.pcn.repository.service.interfaces.*;
+import calculation.repository.entity.*;
+import calculation.repository.service.interfaces.*;
 import calculation.services.dto.CalculatedOutputParameterForElement;
 import calculation.services.dto.InputAndOutputParameterElement;
 import calculation.services.inputs.InputParameterAndElementValue;
 import calculation.services.inputs.OutputParameterIdAndFormula;
-import calculation.services.interfaces.ICalculationService;
-import calculation.services.interfaces.IInputParameterService;
-import calculation.services.interfaces.IOutputParameterService;
+import calculation.services.interfaces.CalculationService;
+import calculation.services.interfaces.InputParameterService;
+import calculation.services.interfaces.OutputParameterService;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import calculation.repository.entity.*;
-import calculation.repository.service.interfaces.*;
 
 import javax.script.Invocable;
 import javax.script.ScriptEngine;
@@ -33,15 +31,11 @@ import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
-public class CalculationServiceImpl implements ICalculationService {
-    private final ICalculationRepository calculationRepository;
-    private final IOutputParameterService outputParameterService;
-    private final IInputParameterService inputParameterService;
-    private final IElementRepository elementRepository;
-    private final IInputElementValueRepository inputElementValueRepository;
-    private final IInputElementTransactionRepository inputElementTransactionRepository;
-    private final IOutputElementValueRepository outputElementValueRepository;
-    private final IOutputElementTransactionRepository outputElementTransactionRepository;
+public class CalculationServiceImpl implements CalculationService {
+    private final CalculationRepository calculationRepository;
+    private final OutputParameterService outputParameterService;
+    private final InputParameterService inputParameterService;
+    private final ElementRepository elementRepository;
 
     @Override
     public Calculation findCalculationById(Long id) {
@@ -54,103 +48,76 @@ public class CalculationServiceImpl implements ICalculationService {
             List<InputParameterAndElementValue> inputParameterAndElementValueList,
             List<OutputParameterIdAndFormula> outputParameterIdAndFormulaList,
             Timestamp actionDate) {
-        Calculation calculation = persistCalculatedTransaction(
-                new ArrayList<>()
-                , new ArrayList<>()
-                , actionDate);
         List<InputAndOutputParameterElement> inputAndOutputParameterElementList = getCalculationInformation(
                 inputParameterAndElementValueList,
                 outputParameterIdAndFormulaList
         );
-        List<InputElementTransaction> inputElementTransactionList = inputElementTransactionRepository.saveAll(
+        Calculation calculation = new Calculation(
+                null,
+                actionDate,
+                new ArrayList<>(),
+                new ArrayList<>()
+        );
+        List<InputElementTransaction> inputElementTransactionList =
                 inputAndOutputParameterElementList
                         .stream()
                         .parallel()
                         .map(o -> createInputElementTransactionEachInputValue(o, calculation))
-                        .collect(Collectors.toList())
-        );
-        inputElementValueRepository.saveAll(
-                inputElementTransactionList
+                        .toList();
+        List<CalculatedOutputParameterForElement> calculateForEachElementByOwnParameter =
+                inputAndOutputParameterElementList
                         .stream()
                         .parallel()
-                        .map(o -> creatInputParamValue(o, inputAndOutputParameterElementList))
-                        .reduce(new ArrayList<>(), (inputElementValues, inputElementValues2) -> {
-                            inputElementValues2.addAll(inputElementValues);
-                            return inputElementValues2;
-                        })
-        );
-        List<CalculatedOutputParameterForElement> calculateForEachElementByOwnParameter = inputAndOutputParameterElementList
-                .stream()
-                .parallel()
-                .map(this::calculateForEachElementByOwnParameter)
-                .collect(Collectors.toList());
-        List<OutputElementTransaction> outputElementTransactionList = outputElementTransactionRepository.saveAll(
+                        .map(this::calculateForEachElementByOwnParameter)
+                        .toList();
+        List<OutputElementTransaction> outputElementTransactionList =
                 calculateForEachElementByOwnParameter
                         .stream()
                         .parallel()
                         .map(o -> createOutputElementTransactionEachInputValue(o, calculation))
-                        .collect(Collectors.toList())
-        );
-        outputElementValueRepository.saveAll(
-                outputElementTransactionList
-                        .stream()
-                        .parallel()
-                        .map(o -> creatOutputParamValue(o, calculateForEachElementByOwnParameter))
-                        .reduce(new ArrayList<>(), (outputElementValues, outputElementValues1) -> {
-                            outputElementValues1.addAll(outputElementValues);
-                            return outputElementValues1;
-                        })
-        );
-        return calculationRepository.getReferenceById(calculation.getId());
-    }
-
-    private Calculation persistCalculatedTransaction(
-            List<InputElementTransaction> inputElementTransactionList
-            , List<OutputElementTransaction> outputElementTransactionList
-            , Timestamp actionDate) {
-        Calculation calculation = new Calculation();
-        calculation.setActionDate(actionDate);
+                        .toList();
         calculation.setInputElementTransactionList(inputElementTransactionList);
         calculation.setOutputElementTransactionList(outputElementTransactionList);
-        calculation = calculationRepository.save(calculation);
-        return calculation;
+        return calculationRepository.save(calculation);
     }
 
     private OutputElementTransaction createOutputElementTransactionEachInputValue(
             CalculatedOutputParameterForElement calculatedOutputParameterForElement
             , Calculation calculation) {
-        return new OutputElementTransaction(
+        OutputElementTransaction outputElementTransaction = new OutputElementTransaction(
                 null
                 , elementRepository.getReferenceById(calculatedOutputParameterForElement.getElementId())
                 , calculation
                 , new ArrayList<>()
         );
+        outputElementTransaction.setOutputElementValueList(
+                creatOutputParamValue(
+                        outputElementTransaction,
+                        calculatedOutputParameterForElement
+                )
+        );
+        return outputElementTransaction;
     }
 
     private List<OutputElementValue> creatOutputParamValue(
             OutputElementTransaction outputElementTransaction
-            , List<CalculatedOutputParameterForElement> calculatedOutputParameterForElements
+            , CalculatedOutputParameterForElement calculatedOutputParameterForElements
     ) {
         List<OutputElementValue> result = new ArrayList<>();
-        calculatedOutputParameterForElements
-                .stream()
-                .filter(o -> outputElementTransaction.getElement().getId().equals(o.getElementId()))
-                .findFirst()
-                .ifPresent(o ->
-                        o.getOutputParamValueMapList()
-                                .forEach((outputParameter, s) ->
-                                        result.add(
-                                                new OutputElementValue(
-                                                        null
-                                                        , s
-                                                        , outputParameter.getDataType()
-                                                        , outputParameter
-                                                        , outputElementTransaction
-                                                        , o.getOutputParamFormulaMapList()
-                                                        .get(outputParameter.getId())
-                                                )
-                                        )
-                                ));
+        calculatedOutputParameterForElements.getOutputParamValueMapList()
+                .forEach((outputParameter, s) ->
+                        result.add(
+                                new OutputElementValue(
+                                        null
+                                        , s
+                                        , outputParameter.getDataType()
+                                        , outputParameter
+                                        , outputElementTransaction
+                                        , calculatedOutputParameterForElements.getOutputParamFormulaMapList()
+                                        .get(outputParameter.getId())
+                                )
+                        )
+                );
         return result;
     }
 
@@ -158,33 +125,37 @@ public class CalculationServiceImpl implements ICalculationService {
             InputAndOutputParameterElement inputAndOutputParameterElement
             , Calculation calculation
     ) {
-        return new InputElementTransaction(
+        InputElementTransaction inputElementTransaction = new InputElementTransaction(
                 null,
                 elementRepository.getReferenceById(inputAndOutputParameterElement.getElementId()),
                 calculation,
                 new ArrayList<>());
+        inputElementTransaction.setInputElementValueList(
+                creatInputParamValue(
+                        inputElementTransaction,
+                        inputAndOutputParameterElement
+                )
+        );
+        return inputElementTransaction;
     }
 
     private List<InputElementValue> creatInputParamValue(
             InputElementTransaction inputElementTransaction
-            , List<InputAndOutputParameterElement> inputAndOutputParameterElementList
+            , InputAndOutputParameterElement inputAndOutputParameterElement
     ) {
         List<InputElementValue> result = new ArrayList<>();
-        inputAndOutputParameterElementList
-                .stream()
-                .filter(o -> inputElementTransaction.getElement().getId().equals(o.getElementId()))
-                .findFirst()
-                .ifPresent(o -> o.getInputParamMapList()
-                        .forEach((inputParameter, s) ->
-                                result.add(
-                                        new InputElementValue(
-                                                null,
-                                                s,
-                                                inputParameter.getDataType(),
-                                                inputParameter,
-                                                inputElementTransaction
-                                        )
-                                ))
+        inputAndOutputParameterElement
+                .getInputParamMapList()
+                .forEach((inputParameter, s) ->
+                        result.add(
+                                new InputElementValue(
+                                        null,
+                                        s,
+                                        inputParameter.getDataType(),
+                                        inputParameter,
+                                        inputElementTransaction
+                                )
+                        )
                 );
         return result;
     }
@@ -192,12 +163,24 @@ public class CalculationServiceImpl implements ICalculationService {
     private CalculatedOutputParameterForElement calculateForEachElementByOwnParameter(InputAndOutputParameterElement inputAndOutputParameterElement) {
         CalculatedOutputParameterForElement calculatedOutputParameterForElement = new CalculatedOutputParameterForElement();
         StringBuilder formulaBuilder = new StringBuilder();
-        calculatedOutputParameterForElement.setElementId(inputAndOutputParameterElement.getElementId());
-        inputAndOutputParameterElement.getInputParamMapList().forEach(getBuilderToAddInputToFormula(formulaBuilder));
-        inputAndOutputParameterElement.getOutputParamMapList().forEach(getBuilderToAddOutputToFormula(formulaBuilder));
-        formulaBuilder.append("var _doCalculate = function(){\n").append("var _values = new Map();\n");
-        inputAndOutputParameterElement.getOutputParamMapList().keySet().forEach(getBuilderToAddOutputToCalculation(formulaBuilder));
-        formulaBuilder.append("return JSON.stringify(Object.fromEntries(_values));\n").append("};\n");
+        calculatedOutputParameterForElement
+                .setElementId(inputAndOutputParameterElement.getElementId());
+        inputAndOutputParameterElement
+                .getInputParamMapList()
+                .forEach(getBuilderToAddInputToFormula(formulaBuilder));
+        inputAndOutputParameterElement
+                .getOutputParamMapList()
+                .forEach(getBuilderToAddOutputToFormula(formulaBuilder));
+        formulaBuilder
+                .append("var _doCalculate = function(){\n")
+                .append("var _values = new Map();\n");
+        inputAndOutputParameterElement
+                .getOutputParamMapList()
+                .keySet()
+                .forEach(getBuilderToAddOutputToCalculation(formulaBuilder));
+        formulaBuilder
+                .append("return JSON.stringify(Object.fromEntries(_values));\n")
+                .append("};\n");
         calculatedOutputParameterForElement.setOutputParamValueMapList(doCalculationFormulaScript(
                 formulaBuilder.toString(),
                 inputAndOutputParameterElement.getOutputParamMapList()
@@ -222,7 +205,11 @@ public class CalculationServiceImpl implements ICalculationService {
             Invocable invocable = (Invocable) engine;
             Object result = invocable.invokeFunction("_doCalculate");
             ObjectMapper objectMapper = new ObjectMapper();
-            outputParamMap.putAll(new LinkedHashMap<>((Map<?, ?>) objectMapper.readValue(String.valueOf(result), Object.class)));
+            outputParamMap.putAll(
+                    new LinkedHashMap<>(
+                            (Map<?, ?>) objectMapper.readValue(String.valueOf(result), Object.class)
+                    )
+            );
         } catch (ScriptException | NoSuchMethodException | JsonProcessingException e) {
             throw new RuntimeException(e);
         }
